--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <h1>Responsiveness Methods</h1>
+  <h1>Responsiveness Methods in wessb</h1>
   <a href="./media-query.html">1. Media Queries</a>
   <a href="./grid.html">2. CSS Grid</a>
   <a href="./flexbox.html">3. CSS Flexbox</a>
